fix a2hs button not working on mobile

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -849,6 +849,13 @@ input:focus + span + .dropdown {
   z-index: -999;
 }
 
+#addPwa {
+  position: absolute;
+  left: 15px;
+  bottom: 60px;
+  color: #6b3877;
+}
+
 .app-info span {
   display: block;
 }
